--- a/AUTH/signup.css
+++ b/AUTH/signup.css
@@ -3,7 +3,7 @@
 
 /* CSS Variables - matching site color scheme */
 :root {
-    --navbar-height: 70px;
+    --navbar-height: 55px;
     --midnight-green: #0E3B43;
     --dark-cyan: #357C8A;
     --columbia-blue: #B8D4D1;
