--- a/TRIP CALC/style.css
+++ b/TRIP CALC/style.css
@@ -692,7 +692,7 @@ body {
     max-width: 100%;
     margin: 0;
     padding: 1rem;
-    min-height: calc(100vh - 70px);
+    min-height: calc(100vh - var(--navbar-height));
     background-color: #fafafa;
 }
 
